user sign up form improvements

--- a/mta_prac/mta_prac/app/views/users/index.html.erb
+++ b/mta_prac/mta_prac/app/views/users/index.html.erb
@@ -6,7 +6,15 @@
 <ul>
  <li> Email: <%= @user.email %></li>
 
- <li> Your schedule <%= @user.schedule %> </li>
+ <li> Your schedule<br>
+ Monday: <%= @user.monday %> </li>
+ <li>Tuesday:  <%= @user.tuesday %> </li>
+
+  <li>Wednesday:  <%= @user.wednesday %> </li>
+   <li>Thursday:  <%= @user.thursday %> </li>
+    <li>Friday:  <%= @user.friday %> </li>
+    <li>Saturday:  <%= @user.saturday %> </li>
+    <li>Sunday:  <%= @user.sunday %> </li>
 
  <li> Train Lines  <%= @user.train_lines %> </li>
 
