train parsing user parsing everyone gets a parse

--- a/mta_prac/mta_prac/app/views/users/signin.html.erb
+++ b/mta_prac/mta_prac/app/views/users/signin.html.erb
@@ -1,3 +1,5 @@
+
+<div class=background>
 <h1> Get to Work on Time </h1>
 
 
@@ -18,3 +20,4 @@
 <br><br>
 
 <div class="member">Not a member? <a href="/users/new">Sign Up!</a></div>
+</div>
