--- a/mta_prac/mta_prac/app/assets/stylesheets/users.scss
+++ b/mta_prac/mta_prac/app/assets/stylesheets/users.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.background {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background: url(https://source.unsplash.com/category/buildings/1600x1200/?new+york);
+}
