--- a/mta_prac/mta_prac/app/views/users/signin.html.erb
+++ b/mta_prac/mta_prac/app/views/users/signin.html.erb
@@ -1,7 +1,9 @@
 
-<div class=background>
-<h1> Get to Work on Time </h1>
 
+<div class="name"> Get to Work on Time </div>
+<div class="slogan"> Tired of waiting for a train for an eternity? Let us help!
+<br> We will text you if there is a delay on your train <br>
+  Convenience on a click </div>
 
 
 <div class="sign-in">
@@ -20,4 +22,4 @@
 <br><br>
 
 <div class="member">Not a member? <a href="/users/new">Sign Up!</a></div>
-</div>
+
