--- a/mta_prac/mta_prac/app/views/layouts/application.html.erb
+++ b/mta_prac/mta_prac/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MtaPrac</title>
+    <link rel="icon" type="image/jpg" href="/favicon.ico">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
