better fonts and css

--- a/mta_prac/mta_prac/app/assets/stylesheets/application.scss
+++ b/mta_prac/mta_prac/app/assets/stylesheets/application.scss
@@ -17,3 +17,4 @@
 
 
 @import "materialize";
+@import 'https://fonts.googleapis.com/css?family=Alfa+Slab+One|Bungee+Inline|Gravitas+One|Julius+Sans+One|Lobster|Pacifico|Poiret+One|Quicksand|Rock+Salt|Shrikhand';
