--- a/mta_prac/mta_prac/app/views/users/signin.html.erb
+++ b/mta_prac/mta_prac/app/views/users/signin.html.erb
@@ -12,7 +12,7 @@
     <%= text_field_tag :email, params[:email] %><br><br>
     <%= label_tag :password, 'Password', class:"label" %>
     <%= password_field_tag :password, params[:password_hash] %><br><br>
-    <%= submit_tag "Sign In", class:"waves-effect waves- btn" %>
+    <%= submit_tag "Sign In", class:"btn waves-effect grey darken-" %>
   <%end%>
 </div>
 
