--- a/mta_prac/mta_prac/app/views/layouts/application.html.erb
+++ b/mta_prac/mta_prac/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/jpg" href="/favicon.ico">
     <%= csrf_meta_tags %>
 
+    <%= render 'favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
